# moodle-painkillers

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build_release.yml  passing_tests.yml
src/moodle_painkillers/: __init__.py  __main__.py  desktop_notifications.py  discord.py  moodle_authenticate.py
src/moodle_painkillers/notifications/: __init__.py  discord.py  linux.py  macos.py  windows.py
tests/: test___init__.py  test_moodle_authenticate.py
